--- a/docs/math/p1.md
+++ b/docs/math/p1.md
@@ -4,25 +4,25 @@
 
 ## 实数
 
-#### 分类
+### 分类
 
 有理数(整数、分数)、无理数
 
-#### 定义
+### 定义
 
 无理数：即无限循环小数
 
 还有其他分类方法
 
-#### 注意
+### 注意
 
 判断数的分类时需将数**化到最简**
 
-#### 幂(乘方)的运算
+### 幂(乘方)的运算
 
-$a^m·a^a=a^{m+n}$
+$a^m \cdot a^a=a^{m+n}$
 
-$a^m÷a^a=a^{m-n}$
+$a^m \div a^a=a^{m-n}$
 
 $(a^m)^n=a^{m·n}$
 
@@ -34,11 +34,11 @@ $(a^mb^n)^t=a^{mt}·b^{nt}$
 
 ## 代数式
 
-#### 分类
+### 分类
 
  有理式（整式(多项式、单项式)、分式）、无理式
 
-#### 定义
+### 定义
 
 单项式：如$2a$
 
@@ -48,7 +48,7 @@ $(a^mb^n)^t=a^{mt}·b^{nt}$
 
 无理式：如$\sqrt{a+1}$
 
-#### 注意
+### 注意
 
 对于代数式分类时**不化简**(如$\sqrt{a^2}$为无理式)
 
