--- a/docs/math/p1.md
+++ b/docs/math/p1.md
@@ -24,9 +24,9 @@ $a^m \cdot a^a=a^{m+n}$
 
 $a^m \div a^a=a^{m-n}$
 
-$(a^m)^n=a^{m·n}$
+$(a^m)^n=a^{m \cdot n}$
 
-$(a^mb^n)^t=a^{mt}·b^{nt}$
+$(a^mb^n)^t=a^{mt} \cdot b^{nt}$
 
 ![](https://p2.myzwq.com//i/PicGo/202301291727413.png)
 
