--- a/docs/math/p2.md
+++ b/docs/math/p2.md
@@ -1,9 +1,58 @@
 # 数与式的化简求值 p2
 
-#### 定义
+**出现位置：中考第一道大题**
 
-$a^0=1$
+## 需要知道的知识
 
-#### 注意
+0次：$x^0=1(x\neq 0)$
+
+负次：$a^{-a} = \frac{1}{x^a}$
+
+绝对值：$|x|=\begin{cases} x,\,\,x\geq0\\ -x,\,\,x<0\end{cases}$
+
+根号：
+$$
+\sqrt[5]{a}=x
+$$
+
+$$
+a=x^5
+$$
+
+
+
+平方差公式：$a^2-b^2=(a+b)(a-b)$
+
+完全平方公式：$(a+b)^2=a^2+2ab+b^2$、 $(a-b)^2=a^2-2ab+b^2$
+
+除以一个数等于乘这个数的相反数：$b\div a=b\cdot \frac{1}{a}$
+
+三角函数：记特殊角的值
+
+![](https://p2.myzwq.com/i/PicGo/202301301243739.png)
+
+## 注意
 
 $0^0$  不存在，无意义
+
+
+
+
+
+## 黑板
+
+![](https://p2.myzwq.com/i/PicGo/202301301246147.png)
+
+## 题
+
+直接化简求值：
+
+![](https://p2.myzwq.com/i/PicGo/202301301249072.png)=$3$
+
+![](https://p2.myzwq.com/i/PicGo/202301301251757.png)=$2\sqrt{3}$
+
+代数式的化简求值（先化简再求值）：
+
+![](https://p2.myzwq.com/i/PicGo/202301301307290.png)=$\frac{1}{a+3}=\frac{1}{4}$
+
+![](https://p2.myzwq.com/i/PicGo/202301301309905.png)=$\frac{1}{a-b}=\frac{\sqrt{3}}{3}$
