--- a/docs/math/p2.md
+++ b/docs/math/p2.md
@@ -1,6 +1,5 @@
 # 数与式的化简求值 p2
-
-**出现位置：中考第一道大题**
+**数与式-基础：大题第一题:数与式的化简求值稳定得分**
 
 ## 需要知道的知识
 
@@ -30,6 +29,8 @@ $$
 三角函数：记特殊角的值
 
 ![](https://p2.myzwq.com/i/PicGo/202301301243739.png)
+
+通分：$a=\frac{a^2}{a}$（在代数式化简里好用）
 
 ## 注意
 
